--- a/mission.ipynb
+++ b/mission.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mission Statement Analysis\n",
+    "Mission Statement Analysis:\n",
     "Do mission statements at educational institutions differ based on the total cost of attendance?"
    ]
   },
